# sigma

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  registers.rs  trace.rs  ui.rs
src/arch/: mod.rs
src/arch/linux/: x86_64.rs
