[package]
name = "sigma"
version = "0.0.1"
edition = "2021"
authors = ["Santo Cariotti <santo@dcariotti.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
fork = "0.1.22"
nix = { version = "0.27.1", features = ["ptrace"] }
owo-colors = "3.5.0"
ratatui = "0.23.0"
